--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "A script to generate synthetic data for a BigQuery Data Clean Roo
 requires-python = "==3.12.*"
 dependencies = [
     "google-cloud-bigquery",
+    "google-cloud-bigquery-analyticshub",
 ]
 
 [build-system]
